# albatross

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: conf.rs  http_tests.rs  main.rs  patterns.rs
src/data/: config_patterns
