[package]
name = "albatross"
version = "0.1.0"
authors = ["Christian Wood <cwood821@gmail.com>"]
edition = "2018"

[dependencies]
structopt = { version = "0.3", default-features = false }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
yaml-rust = "0.4.4"